--- a/wokwi.toml
+++ b/wokwi.toml
@@ -1,4 +1,4 @@
 [wokwi]
 version = 1
-firmware = 'build/pio_matrix.uf2'
-elf = 'build/pio_matrix.elf'
+firmware = 'build/Tarefa.uf2'
+elf = 'build/Tarefa.elf'
