--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,3 +1,14 @@
+# Generated Cmake Pico project file
+
+cmake_minimum_required(VERSION 3.13)
+
+set(CMAKE_C_STANDARD 11)
+set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
+
+# Initialise pico_sdk from installed location
+# (note this can come from environment, CMake cache etc)
+
 # == DO NOT EDIT THE FOLLOWING LINES for the Raspberry Pi Pico VS Code Extension to work ==
 if(WIN32)
     set(USERHOME $ENV{USERPROFILE})
@@ -12,67 +23,46 @@ if (EXISTS ${picoVscode})
     include(${picoVscode})
 endif()
 # ====================================================================================
-# Generated Cmake Pico project file
-
-cmake_minimum_required(VERSION 3.13)
-
-set(CMAKE_C_STANDARD 11)
-set(CMAKE_CXX_STANDARD 17)
-set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
-
-# Initialize pico_sdk
-if(WIN32)
-    set(USERHOME $ENV{USERPROFILE})
-else()
-    set(USERHOME $ENV{HOME})
-endif()
-set(sdkVersion 2.1.0)
-set(toolchainVersion 13_3_Rel1)
-set(picotoolVersion 2.1.0)
-set(picoVscode ${USERHOME}/.pico-sdk/cmake/pico-vscode.cmake)
-if (EXISTS ${picoVscode})
-    include(${picoVscode})
-endif()
-
 set(PICO_BOARD pico_w CACHE STRING "Board type")
 
 # Pull in Raspberry Pi Pico SDK (must be before project)
 include(pico_sdk_import.cmake)
 
-project(pio_matrix C CXX ASM)
+project(Tarefa C CXX ASM)
 
-# Initialize the Raspberry Pi Pico SDK
+# Initialise the Raspberry Pi Pico SDK
 pico_sdk_init()
 
-# Add executable
-add_executable(pio_matrix
-    pio_matrix.c
-)
+# Add executable. Default name is the project name, version 0.1
 
-pico_set_program_name(pio_matrix "pio_matrix")
-pico_set_program_version(pio_matrix "0.1")
+add_executable(Tarefa Tarefa.c)
 
-# Enable USB output
-pico_enable_stdio_uart(pio_matrix 0)
-pico_enable_stdio_usb(pio_matrix 1)
+pico_set_program_name(Tarefa "Tarefa")
+pico_set_program_version(Tarefa "0.1")
 
 # Generate PIO header
-pico_generate_pio_header(pio_matrix ${CMAKE_CURRENT_LIST_DIR}/pio_matrix.pio)
+pico_generate_pio_header(${CMAKE_PROJECT_NAME} ${CMAKE_CURRENT_LIST_DIR}/pio_matrix.pio)
 
-# Add libraries
-target_link_libraries(pio_matrix PRIVATE
-    pico_stdlib
-    hardware_pio
-    hardware_adc
-    hardware_clocks
-    pico_bootrom
+target_sources(${CMAKE_PROJECT_NAME} PRIVATE Tarefa.c)
+# Modify the below lines to enable/disable output over UART/USB
+pico_enable_stdio_uart(Tarefa 1)
+pico_enable_stdio_usb(Tarefa 1)
+
+# Add the standard library to the build
+target_link_libraries(Tarefa
+        pico_stdlib)
+
+# Add the standard include files to the build
+target_include_directories(Tarefa PRIVATE
+        ${CMAKE_CURRENT_LIST_DIR}
 )
 
-# Include directories (at root)
-target_include_directories(pio_matrix PRIVATE
-    ${CMAKE_CURRENT_LIST_DIR}
-)
+# Add any user requested libraries
+target_link_libraries(Tarefa 
+        hardware_pio
+        hardware_clocks
+        hardware_adc
+        )
 
-# Add extra outputs
-pico_add_extra_outputs(pio_matrix)
+pico_add_extra_outputs(Tarefa)
 
