O código parece estar funcionando direitinho, só a definição de intensidade que está meio estranha

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,57 +12,68 @@ if (EXISTS ${picoVscode})
     include(${picoVscode})
 endif()
 # ====================================================================================
+# Generated Cmake Pico project file
+
 cmake_minimum_required(VERSION 3.13)
 
 set(CMAKE_C_STANDARD 11)
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 
+# Initialise pico_sdk from installed location
+# (note this can come from environment, CMake cache etc)
+
+# == DO NOT EDIT THE FOLLOWING LINES for the Raspberry Pi Pico VS Code Extension to work ==
 if(WIN32)
     set(USERHOME $ENV{USERPROFILE})
 else()
     set(USERHOME $ENV{HOME})
 endif()
 set(sdkVersion 2.1.0)
-set(toolchainVersion 13_3_Rel1)
+set(toolchainVersion 13_2_Rel1)
 set(picotoolVersion 2.1.0)
 set(picoVscode ${USERHOME}/.pico-sdk/cmake/pico-vscode.cmake)
 if (EXISTS ${picoVscode})
     include(${picoVscode})
 endif()
+# ====================================================================================
+set(PICO_BOARD pico CACHE STRING "Board type")
 
-set(PICO_BOARD CACHE STRING "Board type")
-
+# Pull in Raspberry Pi Pico SDK (must be before project)
 include(pico_sdk_import.cmake)
 
 project(led_matrix C CXX ASM)
 
+# Initialise the Raspberry Pi Pico SDK
 pico_sdk_init()
 
-# Primeiro, adicione o executável
-add_executable(led_matrix 
-    src/led_matrix.c
-)
+# Add executable. Default name is the project name, version 0.1
 
-# Depois, gere o header do arquivo PIO
-pico_generate_pio_header(led_matrix ${CMAKE_CURRENT_LIST_DIR}/src/ws2812.pio)
+add_executable(led_matrix led_matrix.c )
 
 pico_set_program_name(led_matrix "led_matrix")
 pico_set_program_version(led_matrix "0.1")
 
-pico_enable_stdio_uart(led_matrix 0)
+# Generate PIO header
+pico_generate_pio_header(led_matrix ${CMAKE_CURRENT_LIST_DIR}/ws2818b.pio)
+
+# Modify the below lines to enable/disable output over UART/USB
+pico_enable_stdio_uart(led_matrix 1)
 pico_enable_stdio_usb(led_matrix 1)
 
+# Add the standard library to the build
 target_link_libraries(led_matrix
-    pico_stdlib
-    hardware_pio
-    hardware_clocks
+        pico_stdlib)
+
+# Add the standard include files to the build
+target_include_directories(led_matrix PRIVATE
+  ${CMAKE_CURRENT_LIST_DIR}
 )
 
-target_include_directories(led_matrix PRIVATE
-    ${CMAKE_CURRENT_LIST_DIR}
-    ${CMAKE_CURRENT_LIST_DIR}/src
-    ${CMAKE_BINARY_DIR}
-)
+# Add any user requested libraries
+target_link_libraries(led_matrix 
+        hardware_pio
+        hardware_clocks
+        )
 
 pico_add_extra_outputs(led_matrix)
